k8s/app-a.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app-a
  name: app-a
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
        service-mesh: enabled
    spec:
      containers:
      - name: app-a
        image: diy-sm-app-a
        imagePullPolicy: IfNotPresent
