k8s/http-client.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: http-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: http-client
  name: http-client
  labels:
    app: http-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-client
  template:
    metadata:
      labels:
        app: http-client
      annotations:
        diy-service-mesh/inject: "true"
    spec:
      serviceAcountName: http-client
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      containers:
      - name: http-client
        image: diy-sm-http-client
        imagePullPolicy: IfNotPresent
