k8s/app-b.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app-b
  name: app-b
  labels:
    app: app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
        service-mesh: enabled
    spec:
      # initContainers:
      # - name: proxy-init
      #   image: diy-sm-proxy-init
      #   imagePullPolicy: IfNotPresent
      #   securityContext:
      #     capabilities:
      #       add:
      #         - NET_ADMIN
      #         - NET_RAW
      #       drop:
      #         - ALL
      containers:
      # - name: proxy
      #   image: diy-sm-proxy
      #   imagePullPolicy: IfNotPresent
      #   securityContext:
      #     runAsUser: 1337
      - name: app-b
        image: diy-sm-app-b
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: app-b
  name: app-b
spec:
  selector:
    app: app-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
