k8s/controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: service-mesh
  name: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      serviceAccountName: controller
      containers:
      - name: controller
        image: diy-sm-controller
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: service-mesh
  name: controller
spec:
  selector:
    app: controller
  ports:
  - port: 8080
    targetPort: 8080
