k8s/http-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: http-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: http-server
  name: http-server
  labels:
    app: http-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
        service-mesh: enabled
      annotations:
        diy-service-mesh/inject: "true"
    spec:
      serviceAccountName: http-server
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      containers:
      - name: http-server
        image: diy-sm-http-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: http-server
  name: http-server
spec:
  selector:
    app: http-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
