k8s/injector.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-mesh-injector
  namespace: service-mesh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-mesh-injector
  template:
    metadata:
      labels:
        app: service-mesh-injector
    spec:
      containers:
      - name: service-mesh-injector
        image: diy-sm-injector
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: webhook-certs
          mountPath: /certs
          readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: service-mesh-injector-certs
---
apiVersion: v1
kind: Service
metadata:
  name: service-mesh-injector
  namespace: service-mesh
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: service-mesh-injector
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: service-mesh-injector-webhook
webhooks:
- name: service-mesh-injector.service-mesh.svc
  clientConfig:
    service:
      name: service-mesh-injector
      namespace: service-mesh
      path: "/inject"
  objectSelector:
    matchLabels:
      service-mesh: enabled
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
